Added eventlistener and clickcounter

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title>Ticker Tracker</title>
+	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="tickerTracker.css">
 </head>
 <body>
 	<h1>Ticker Tracker</h1>
 	<div id = "container">
-		<div class ="square">
+		<div class = "square">
 			
 		</div>	
 	</div>
