--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -7,12 +7,25 @@
 </head>
 <body>
 	<h1>Ticker Tracker</h1>
-	<div id = "container">
-		<div class = "square">
-			
-		</div>	
-	</div>
+	<p>
+		Click on the square below for every breath as the timer runs below.
+		<br>
+		Note: 1 breath = 1 breath in and out.
+	</p>
 	
+	<div id="container">
+		<div class="square"></div>	
+	</div>
+
+	<div id="timer">Timer</div>
+
+	<div id="count">Tap Count</div>
+
+	<div id="nav">
+		<button id="reset">Reset</button>
+		<button id="help">Help</button>
+	</div>
+
 <script type="text/javascript" src="tickerTracker.js"></script>
 </body>
 </html>
