tidied up html file

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Ticker Tracker</title>
-	<meta charset="utf-8"/>
-	<link rel="stylesheet" type="text/css" href="tickerTracker.css">
-</head>
-<body>
-	<h1>Ticker Tracker</h1>
-	<p>
-		Click on the square below for every breath as the timer runs below.
-		<br>
-		Note: 1 breath = 1 breath in and out.
-	</p>
-	
-	<div id="container">
-		<div class="square"></div>	
-	</div>
 
-	<div id="timer">Timer</div>
+  <head>
+    <title>Ticker Tracker</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="tickerTracker.css">
+  </head>
 
-	<div id="count">Tap Count</div>
+  <body>
+    <h1>Ticker Tracker</h1>
+    <p>
+      Click on the square below for every breath as the timer runs below.
+      <br> Note: 1 breath = 1 breath in and out.
+    </p>
 
-	<div id="nav">
-		<button id="reset">Reset</button>
-		<button id="help">Help</button>
-	</div>
+    <div id="container">
+      <div class="square"></div>
+    </div>
 
-<script type="text/javascript" src="tickerTracker.js"></script>
-</body>
+    <div id="timer">Timer</div>
+
+    <div id="count">Tap Count</div>
+
+    <div id="nav">
+      <button id="reset">Reset</button>
+      <button id="help">Help</button>
+    </div>
+
+    <script type="text/javascript" src="tickerTracker.js"></script>
+  </body>
+
 </html>
