countdown timer working

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -18,7 +18,7 @@
       <div class="square"></div>
     </div>
 
-    <div id="timer">Timer</div>
+    <div id="timerDiv">Timer</div>
 
     <div id="count">Tap Count</div>
 
