refactored code for timer reset function

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -18,9 +18,11 @@
       <div class="square"></div>
     </div>
 
-    <div id="timerDiv">Timer</div>
-
-    <div id="count">Tap Count</div>
+    <div id="time">Time remaining:</div>
+    <div id="timerDiv"></div>
+    
+    <div id="tapCount">Tap Count:</div>
+    <div id="taps"></div>
 
     <div id="nav">
       <button id="reset">Reset</button>
