function for addition of click events

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -5,6 +5,7 @@
     <title>Ticker Tracker</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="tickerTracker.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -15,14 +16,14 @@
     </p>
 
     <div id="container">
-      <div class="square"></div>
+      <div id="square"></div>
     </div>
 
     <div id="time">Time remaining:</div>
     <div id="timerDiv"></div>
     
-    <div id="tapCount">Tap Count:</div>
-    <div id="taps"></div>
+    <div id="breaths">Breaths:</div>
+    <div id="clicks"></div>
 
     <div id="nav">
       <button id="reset">Reset</button>
