turned square to button & tidied up rest function

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -16,10 +16,10 @@
     </p>
 
     <div id="container">
-      <div id="square"></div>
+      <button id="square"></button>
     </div>
 
-    <div id="time">Time remaining:</div>
+    <div id="time">Time remaining (seconds):</div>
     <div id="timerDiv"></div>
     
     <div id="breaths">Breaths:</div>
