refactoring function breath

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -16,14 +16,16 @@
     </p>
 
     <div id="container">
-      <button id="square"></button>
+      <button id="square">
+        <div id="breath"></div>
+      </button>
     </div>
 
     <div id="time">Time remaining (seconds):</div>
     <div id="timerDiv"></div>
     
     <div id="breaths">Breaths:</div>
-    <div id="clicks"></div>
+    <div id="sum"></div>
 
     <div id="nav">
       <button id="reset">Reset</button>
