added help page

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -29,7 +29,7 @@
 
     <div id="nav">
       <button id="reset">Reset</button>
-      <button id="help">Help</button>
+      <button id="help" onclick="window.location=('help.html');">Help</button>
     </div>
 
     <script type="text/javascript" src="tickerTracker.js"></script>
