--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -10,10 +10,17 @@
 
   <body>
     <h1>Ticker Tracker</h1>
-    <p>
-      Click on the square below for every breath as the timer runs below.
-      <br> Note: 1 breath = 1 breath in and out.
-    </p>
+    <div id="directions">
+      <h3>Directions</h3>
+        <ul>
+          <li>Click on the square below for every breath as the timer runs below. Note: 1 breath = 1 breath in and out.</li>
+          <li>You will be provided with a Sleeping Respiratory Rate when the timer runs out.</li>
+            <ul>
+                <li>Normal SRR in dogs and cats: < 30 breaths/min</li>
+                <li>High SRR: >30 breaths/min - Contact your vet if SRR is consistently elevated.</li>
+            </ul>
+        </ul>
+      </div>
 
     <div id="container">
       <button id="square">
@@ -23,14 +30,18 @@
 
     <div id="time">Time remaining (seconds):</div>
     <div id="timerDiv"></div>
-    
     <div id="breaths">Breaths:</div>
     <div id="sum"></div>
+    
+
 
     <div id="nav">
       <button id="reset">Reset</button>
       <button id="help" onclick="window.location=('help.html');">Help</button>
     </div>
+
+   
+
 
     <script type="text/javascript" src="tickerTracker.js"></script>
   </body>
