tidied up JS and removed repetitive code

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -12,14 +12,15 @@
     <h1>Ticker Tracker</h1>
     <div id="directions">
       <h3>Directions</h3>
-        <ul>
+        <ol>
+          <li>Make sure your pet is asleep and not dreaming</li>
           <li>Click on the square below for every breath as the timer runs below. Note: 1 breath = 1 breath in and out.</li>
           <li>You will be provided with a Sleeping Respiratory Rate when the timer runs out.</li>
             <ul>
                 <li>Normal SRR in dogs and cats: < 30 breaths/min</li>
                 <li>High SRR: >30 breaths/min - Contact your vet if SRR is consistently elevated.</li>
             </ul>
-        </ul>
+        </ol>
       </div>
 
     <div id="container">
@@ -33,15 +34,10 @@
     <div id="breaths">Breaths:</div>
     <div id="sum"></div>
     
-
-
     <div id="nav">
       <button id="reset">Reset</button>
       <button id="help" onclick="window.location=('help.html');">Help</button>
     </div>
-
-   
-
 
     <script type="text/javascript" src="tickerTracker.js"></script>
   </body>
