removed reset function and added reload

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -29,9 +29,9 @@
       </button>
     </div>
 
-    <div id="time">Time remaining (seconds):</div>
+    <div class="time">Time remaining (seconds):</div>
     <div id="timerDiv"></div>
-    <div id="breaths">Breaths:</div>
+    <div class="breaths">SRR:</div>
     <div id="sum"></div>
     
     <div id="nav">
