added info to help page

--- a/help.html
+++ b/help.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8" />
 	<title>Help</title>
 </head>
 <body>
-Why should I use this app?
-What is Degenerative Valve Disease?
-
+	<h1>Ticker Tracker | Help</h1>
+		<h3>Why should I use this app?</h3>
+			<p>To monitor the sleeping respiratory rate and signs of heart disease in your pet dog or cat.</p>
+		<h3>What is a Sleeping Respiratory Rate?</h3>
+			<p>Monitoring the sleeping respiratory rate is a useful tool in assessing whether your dog or cat is showing signs of heart disease (congestive heart failure).</p>
+			<p>To measure the sleeping heart rate make sure your pet is in a comfortable environment (not too hot/cold). Your dog needs to be asleep (i.e. not dreaming). A full breath in and out is counted as a single breath.</p>
+			<p>Normal sleeping respiratory rate: < 30 breaths per minute.</p>
+		<h3>What is Heart Disease and how does it affect my pet?</h3>
+			<p>There are a lot of different types of heart disease in pet dogs and cats most common being degenerative heart disease which can lead to chronic heart failure. You can find more information <a href="http://cprvictoria.com.au/disease-explanations.html">here.</a> </p>
+		<h3>What can I do if the sleeping respiratory is high?</h3>
+			<p>Consult your veternarian.</p>
+		<a href="tickerTracker.html">Back to Home</a>
 </body>
 </html>
