added help page

--- a/tickerTracker.html
+++ b/tickerTracker.html
@@ -23,7 +23,9 @@
         </ol>
       </div>
 
-    <div id="container">
+  
+</div>
+    <div class="container">
       <button id="square">
         <div id="breath"></div>
       </button>
